# robot-learning-mlx

./: README.md  pyproject.toml
scripts/: MUJOCO_LOG.TXT  sample.py
src/rl_mlx/: model.py
src/rl_mlx/policy/: a2c.py  reinforce.py
